--- a/html/xmlfeed_eqvol.html
+++ b/html/xmlfeed_eqvol.html
@@ -576,116 +576,124 @@
 				}
 			} catch (error) {
 			}
-			tableCell = document.createElement('th');
-			tableCell.innerText = '地震検知日時';
-			tableCell.classList.add('eqvol_header');
-			tableCell.classList.add('eqvol_header_detecttime');
-			tableLine.append(tableCell);
-			tableCell = document.createElement('th');
-			tableCell.innerText = '震央地名';
-			tableCell.classList.add('eqvol_header');
-			tableCell.classList.add('eqvol_header_centerofthequake');
-			tableLine.append(tableCell);
-			tableCell = document.createElement('th');
-			tableCell.innerText = '最大震度';
-			tableCell.classList.add('eqvol_header');
-			tableCell.classList.add('eqvol_header_maxint');
-			tableLine.append(tableCell);
-			tableCell = document.createElement('th');
-			tableCell.innerText = '都道府県';
-			tableCell.classList.add('eqvol_header');
-			tableCell.classList.add('eqvol_header_pref');
-			tableLine.append(tableCell);
-			tableCell = document.createElement('th');
-			tableCell.innerText = '震度';
-			tableCell.classList.add('eqvol_header');
-			tableCell.classList.add('eqvol_header_int');
-			tableLine.append(tableCell);
-			tableMeta.append(tableLine);
-			tableBlock.append(tableMeta);
-			wrapLine.append(tableBlock);
-			tableMeta = document.createElement('tbody');
 
-			/*
-			 * Object.keys().reverse() https://sossy-blog.com/useful/5054/
-			*/
-			console.debug( arguments.callee.name, [eqvol] );
-			Object.keys(eqvol).reverse().map(function(key){
-				console.debug( arguments.callee.name, [eqvol[key]] );
-				val_r = eqvol[key];
-
-				console.debug( arguments.callee.name, [val_r.detail.Body] );
-				tableLine = document.createElement('tr');
-				privLevel = checkAuthStatus();
-				try {
-					if (!!privLevel) {
-						if ( (privLevel.eqvol.userlevel & 3) == 3 ) {
-							tableCell = document.createElement('td');
-							tableCell.classList.add('priv');
-							tableCell.classList.add('eqvol_body');
-							tableCell.classList.add('eqvol_body_alert');
-							tableText = document.createComment(JSON.stringify(val_r));
-							tableCell.append(tableText);
-							tableLine.append(tableCell);
-						}
-					}
-				} catch (error) {
-				}
-				tableCell = document.createElement('td');
-				tableCell.style.textAlign='center';
-				linkText = document.createElement('a');
-				linkText.href = val_r['detail']['Head']['jma']['link']['@attributes']['href'];
-				linkText.target = '_blank';
-				linkText.innerText = datef(new Date(val_r.detail.Body.Earthquake.ArrivalTime));
-				tableCell.classList.add('eqvol_body');
-				tableCell.classList.add('eqvol_body_detecttime');
-				tableCell.append(linkText);
+			try {
+				tableCell = document.createElement('th');
+				tableCell.innerText = '地震検知日時';
+				tableCell.classList.add('eqvol_header');
+				tableCell.classList.add('eqvol_header_detecttime');
 				tableLine.append(tableCell);
-				tableCell = document.createElement('td');
-				tableCell.innerText = val_r.detail.Body.Earthquake.Hypocenter.Area.Name;
-				tableCell.classList.add('eqvol_body');
-				tableCell.classList.add('eqvol_body_centerofthequake');
-				tableCell.style.textAlign='center';
+				tableCell = document.createElement('th');
+				tableCell.innerText = '震央地名';
+				tableCell.classList.add('eqvol_header');
+				tableCell.classList.add('eqvol_header_centerofthequake');
 				tableLine.append(tableCell);
-				tableCell = document.createElement('td');
-				tableCell.innerText = val_r.detail.Body.Intensity.Observation.MaxInt;
-				tableCell.classList.add('eqvol_body');
-				tableCell.classList.add('eqvol_body_maxint');
-				tableCell.classList.add('eqvol_body_maxint'+'_'+parseInt(val_r.detail.Body.Intensity.Observation.MaxInt, 10));
-				tableCell.style.textAlign='right';
+				tableCell = document.createElement('th');
+				tableCell.innerText = '最大震度';
+				tableCell.classList.add('eqvol_header');
+				tableCell.classList.add('eqvol_header_maxint');
 				tableLine.append(tableCell);
-				tableCell = document.createElement('td');
-				Object.keys(val_r.detail.Body.Intensity.Observation.Pref).forEach(function(key1) {
-					sub1_tableLine = document.createElement('div');
-					console.debug( arguments.callee.name, [val_r.detail.Body.Intensity.Observation.Pref[key1].Name] );
-					sub1_tableCell = document.createElement('div');
-					sub1_tableCell.innerText = val_r.detail.Body.Intensity.Observation.Pref[key1].Name;
-					sub1_tableCell.style.textAlign='center';
-					tableCell.append(sub1_tableCell);
-				});
-				tableCell.classList.add('eqvol_body');
-				tableCell.classList.add('eqvol_body_pref');
-				tableCell.append(sub1_tableLine);
+				tableCell = document.createElement('th');
+				tableCell.innerText = '都道府県';
+				tableCell.classList.add('eqvol_header');
+				tableCell.classList.add('eqvol_header_pref');
 				tableLine.append(tableCell);
-				tableCell = document.createElement('td');
-				Object.keys(val_r.detail.Body.Intensity.Observation.Pref).forEach(function(key1) {
-					sub1_tableLine = document.createElement('div');
-					console.debug( arguments.callee.name, [val_r.detail.Body.Intensity.Observation.Pref[key1].MaxInt] );
-					sub1_tableCell = document.createElement('div');
-					sub1_tableCell.innerText = val_r.detail.Body.Intensity.Observation.Pref[key1].MaxInt;
-					sub1_tableCell.style.textAlign='right';
-					tableCell.append(sub1_tableCell);
-				});
-				tableCell.classList.add('eqvol_body');
-				tableCell.classList.add('eqvol_body_int');
-				tableCell.append(sub1_tableLine);
+				tableCell = document.createElement('th');
+				tableCell.innerText = '震度';
+				tableCell.classList.add('eqvol_header');
+				tableCell.classList.add('eqvol_header_int');
 				tableLine.append(tableCell);
-
 				tableMeta.append(tableLine);
-			});
-			tableBlock.append(tableMeta);
-			wrapLine.append(tableBlock);
+				tableBlock.append(tableMeta);
+				wrapLine.append(tableBlock);
+				tableMeta = document.createElement('tbody');
+	
+				/*
+				 * Object.keys().reverse() https://sossy-blog.com/useful/5054/
+				*/
+				console.debug( arguments.callee.name, [eqvol] );
+				Object.keys(eqvol).reverse().map(function(key){
+					console.debug( arguments.callee.name, [eqvol[key]] );
+					val_r = eqvol[key];
+	
+					console.debug( arguments.callee.name, [val_r.detail.Body] );
+					tableLine = document.createElement('tr');
+					privLevel = checkAuthStatus();
+					try {
+						if (!!privLevel) {
+							if ( (privLevel.eqvol.userlevel & 3) == 3 ) {
+								tableCell = document.createElement('td');
+								tableCell.classList.add('priv');
+								tableCell.classList.add('eqvol_body');
+								tableCell.classList.add('eqvol_body_alert');
+								tableText = document.createComment(JSON.stringify(val_r));
+								tableCell.append(tableText);
+								tableLine.append(tableCell);
+							}
+						}
+					} catch (error) {
+					}
+					tableCell = document.createElement('td');
+					tableCell.style.textAlign='center';
+					linkText = document.createElement('a');
+					linkText.href = val_r['detail']['Head']['jma']['link']['@attributes']['href'];
+					linkText.target = '_blank';
+					linkText.innerText = datef(new Date(val_r.detail.Body.Earthquake.ArrivalTime));
+					tableCell.classList.add('eqvol_body');
+					tableCell.classList.add('eqvol_body_detecttime');
+					tableCell.append(linkText);
+					tableLine.append(tableCell);
+					tableCell = document.createElement('td');
+					tableCell.innerText = val_r.detail.Body.Earthquake.Hypocenter.Area.Name;
+					tableCell.classList.add('eqvol_body');
+					tableCell.classList.add('eqvol_body_centerofthequake');
+					tableCell.style.textAlign='center';
+					tableLine.append(tableCell);
+					tableCell = document.createElement('td');
+					tableCell.innerText = val_r.detail.Body.Intensity.Observation.MaxInt;
+					tableCell.classList.add('eqvol_body');
+					tableCell.classList.add('eqvol_body_maxint');
+					tableCell.classList.add('eqvol_body_maxint'+'_'+parseInt(val_r.detail.Body.Intensity.Observation.MaxInt, 10));
+					tableCell.style.textAlign='right';
+					tableLine.append(tableCell);
+					tableCell = document.createElement('td');
+					Object.keys(val_r.detail.Body.Intensity.Observation.Pref).forEach(function(key1) {
+						sub1_tableLine = document.createElement('div');
+						console.debug( arguments.callee.name, [val_r.detail.Body.Intensity.Observation.Pref[key1].Name] );
+						sub1_tableCell = document.createElement('div');
+						sub1_tableCell.innerText = val_r.detail.Body.Intensity.Observation.Pref[key1].Name;
+						sub1_tableCell.style.textAlign='center';
+						tableCell.append(sub1_tableCell);
+					});
+					tableCell.classList.add('eqvol_body');
+					tableCell.classList.add('eqvol_body_pref');
+					tableCell.append(sub1_tableLine);
+					tableLine.append(tableCell);
+					tableCell = document.createElement('td');
+					Object.keys(val_r.detail.Body.Intensity.Observation.Pref).forEach(function(key1) {
+						sub1_tableLine = document.createElement('div');
+						console.debug( arguments.callee.name, [val_r.detail.Body.Intensity.Observation.Pref[key1].MaxInt] );
+						sub1_tableCell = document.createElement('div');
+						sub1_tableCell.innerText = val_r.detail.Body.Intensity.Observation.Pref[key1].MaxInt;
+						sub1_tableCell.style.textAlign='right';
+						tableCell.append(sub1_tableCell);
+					});
+					tableCell.classList.add('eqvol_body');
+					tableCell.classList.add('eqvol_body_int');
+					tableCell.append(sub1_tableLine);
+					tableLine.append(tableCell);
+	
+					tableMeta.append(tableLine);
+				});
+				tableBlock.append(tableMeta);
+				wrapLine.append(tableBlock);
+				
+			} catch (error) {
+				console.error(error);
+				wrapLine.innerText = error.message;
+			}
 			root_body.append(wrapLine);
+
 		}
 		function setChassisWidth(width=0) {
 			/* to Int */
